Bug 605678, added another truncated field

--- a/media/css/zamboni/developers.css
+++ b/media/css/zamboni/developers.css
@@ -150,7 +150,8 @@
     width: 250px;
 }
 
-#addon_description {
+#addon_description,
+#developer_comments {
     max-height: 6.4em;
     overflow: hidden;
 }
